# theme-manager

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build-test.yaml  clippy.yaml
config-example/: config.json
src/: cli.rs  command.rs  config.rs  constant.rs  context.rs  gsettings.rs  handlers.rs  logging.rs  main.rs  theme.rs  util.rs
src/context/: data.rs
src/theme/: theme_type.rs
