[package]
name = "theme-manager"
version = "0.1.0"
authors = ["Kacper Kafara <kacperkafara@gmail.com>"]
edition = "2021"
description = """
Simplified CLI for theme management for Linux Mint Cinnamon.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.25", features = ["derive"] }
