[package]
name = "theme-manager"
version = "0.1.0"
authors = ["Kacper Kafara <kacperkafara@gmail.com>"]
edition = "2021"
description = """
Simplified CLI for theme management for Linux Mint Cinnamon.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.25", features = ["derive"] }
log = "0.4.17"
log4rs = "1.2.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
